--- a/index.html
+++ b/index.html
@@ -11,52 +11,28 @@
 
     <body>
         <div class="container">
-            <form action="" class="">
+            <form role="form" action="" class="" id="formulario" name="">
                 <div class="form-group">
                     <label>Nombres:</label>
-                    <input type="text" class="form-control" name=" " id="nombre " placeholder="Introduzca sus Nombres ">
+                    <input type="text" class="form-control" name=" " id="nombre" placeholder="Introduzca sus Nombres">
                 </div>
                 <div class="form-group">
                     <label>Apellidos:</label>
-                    <input type="text" class="form-control" name=" " id="apellido " placeholder="Introduzca sus Apellidos ">
-                </div>
-                <div class="form-group">
-                    <label>Nacionalidad</label>
-                    <input type="text" class="form-control" name=" " id="nacionalidad " placeholder="Introduzca su Nacionalidad ">
+                    <input type="text" class="form-control" name=" " id="apellido" placeholder="Introduzca sus Apellidos">
                 </div>
                 <div class="form-group">
                     <label>Cédula</label>
-                    <input type="text" class="form-control" name=" " id="cedula " placeholder="Introduzca su Cédula ">
+                    <input type="text" class="form-control" name=" " id="cedula" placeholder="Introduzca su Cédula">
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="text" class="form-control" name=" " id="email " placeholder="Introduzca su Email ">
+                    <input type="email" class="form-control" name=" " id="email" placeholder="Introduzca su Email">
                 </div>
                 <div class="form-group">
-                    <label>Fecha de Nacimientoform-controllabel</label>
-                    <input type="text" class="form-control" name=" " id="fecha " placeholder="Introduzca su Fecha de Nacimiento ">
+                    <label>Teléfono</label>
+                    <input type="tel" class="form-control" name=" " id="telefono" placeholder="Introduzca su número de teléfono">
                 </div>
-                <div class="form-group">
-                    <label>Teléfono Celular</label> 
-                    <input type="text" class="form-control" name=" " id="celular " placeholder="Introduzca su Número Celular ">
-                </div>
-                <div class="form-group">
-                    <label>Teléfono Fijo</label>
-                    <input type="text"" class="form-control" name=" " id="fijo " placeholder="Introduzca su Número Fijo ">
-                </div>
-                <div class="form-group">
-                    <label>Salario</label>
-                    <input type="text" class="form-control" name=" " id="salario " placeholder="Introduzca su Salario ">
-                </div>
-                <div class="form-group">
-                    <label>Departamento</label> 
-                    <input type="text" class="form-control" name=" " id="departamento " placeholder="Introduzca su Departamento ">
-                </div>
-                <div class="form-group">
-                    <label>Cargo</label>
-                    <input type="text" class="form-control" name=" " id="cargo " placeholder="Introduzca su Cargo ">
-                </div>
-                <button class="">Enviar</button>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
             <script src="http://code.jquery.com/jquery.js "></script>
