--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="form-group inner-addon left-addon">
                     <label>Cédula</label>
                     <i class="fa fa-wpforms"></i>
-                    <input type="text" class="form-control" name=" " id="cedula" placeholder="Introduzca su Cédula" required/ >
+                    <input type="number" class="form-control" name=" " id="cedula" placeholder="Introduzca su Cédula" required/ >
                 </div>
                 <div class="form-group inner-addon left-addon">
                     <label>Email</label>
@@ -42,7 +42,7 @@
                 <div class="form-group inner-addon left-addon">
                     <label>Teléfono</label>
                     <i class="fa fa-phone"></i>
-                    <input type="text" class="form-control" name=" " id="telefono" max="9" placeholder="Introduzca su número de teléfono" required/>
+                    <input type="tel" class="form-control" name=" " id="telefono" max="9" placeholder="Introduzca su número de teléfono" required/>
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
